@@ -1,22 +1,20 @@
 package com.kodilla.exception.io;
 
-import java.io.File;
-import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 public class FileReader {
 
-        public void readFile() {
-            ClassLoader classLoader = getClass().getClassLoader();
-            File file = new File(classLoader.getResource("names.txt").getFile());
+    public void readFile(final String fileName) throws FileReaderException {
+        ClassLoader classLoader = getClass().getClassLoader();
 
-            try(Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))){
-                fileLines.forEach(System.out::println);
-            } catch (IOException e) {
-                System.out.println("Something went wrong "+ e);
-            }finally {
+        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
+            fileLines.forEach(System.out::println);
+        } catch (Exception e) {
+            throw new FileReaderException();
+        }
+            finally{
                 System.out.println("i am going to stay here forever");
             }
         }
-   }
+    }
